--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -15,6 +15,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '5.0.x'
+
       - name: Build project
         run: |
           dotnet build WeatherMonitoringService/WeatherMonitoringService.sln
@@ -29,9 +34,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: dotnet restore
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '5.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore WeatherMonitoringServiceTests/WeatherMonitoringServiceTests.csproj
+        working-directory: WeatherMonitoringServiceTests
 
       - name: Test project
         run: |
           dotnet test WeatherMonitoringServiceTests/WeatherMonitoringServiceTests.csproj
+        working-directory: WeatherMonitoringServiceTests
